# ancs4linux

./: .gitignore  Device.py  Dockerfile  HCI.py  Handler.py  Hci.py  LICENSE.txt  README.md  __setup.py  ci.sh  diagram.md  main.py  onNotification.sh  pyproject.toml  search_for_device.py  setup.py
.github/workflows/: main.yml
ancs4linux/: addr.txt
ancs4linux/advertising/: advertisement.py  main.py  manager.py  pairing.py  server.py
ancs4linux/common/: apis.py  dbus.py  external_apis.py  task_restarter.py  types.py
ancs4linux/ctl/: main.py
ancs4linux/desktop_integration/: main.py  notification.py
ancs4linux/observer/: device.py  device_comm.py  main.py  mobile_device.py  mobile_scanner.py  scanner.py  server.py
ancs4linux/observer/ancs/: builders.py  constants.py  parsers.py
ancs4linux/server/: advertising.py  main.py  mobile_device.py  mobile_scanner.py  notification.py  server.py  server_interface.py  server_object.py
autorun/: ancs4linux-advertising.service  ancs4linux-advertising.xml  ancs4linux-desktop-integration.service  ancs4linux-observer.service  ancs4linux-observer.xml  ancs4linux-server.service  ancs4linux-server.xml  development.sh  install.sh
handlers/: battery.sh  notification
old/: Device.py  Handler.py  main.py
