[tool.poetry]
name = "ancs4linux"
version = "1.0.0"
description = "Control your iOS device from Linux desktop"
authors = ["Paweł Zmarzły <pawo2500@gmail.com>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/pzmarzly/ancs4linux"

[tool.poetry.scripts]
ancs4linux-advertising = 'ancs4linux.advertising.main:app'
ancs4linux-desktop-integration = 'ancs4linux.desktop_integration.main:app'
ancs4linux-ctl = 'ancs4linux.ctl.main:app'
ancs4linux-observer = 'ancs4linux.observer.main:app'

[tool.poetry.dependencies]
python = "^3.7"
dasbus = "^1.6"
PyGObject = "^3.42.0"
pydantic = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
